Display map scores in match stats pages
