# backend/swagger.json
@@ -104,6 +104,45 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"IMatchMapStats": {
+				"properties": {
+					"matchId": {
+						"type": "string"
+					},
+					"map": {
+						"type": "string"
+					},
+					"teamA": {
+						"type": "string"
+					},
+					"teamAScore": {
+						"type": "number",
+						"format": "double"
+					},
+					"teamB": {
+						"type": "string"
+					},
+					"teamBScore": {
+						"type": "number",
+						"format": "double"
+					},
+					"timestamp": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"matchId",
+					"map",
+					"teamA",
+					"teamAScore",
+					"teamB",
+					"teamBScore",
+					"timestamp"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"TMatchState": {
 				"type": "string",
 				"enum": ["ELECTION", "MATCH_MAP", "FINISHED"],
@@ -2405,6 +2444,47 @@
 					{
 						"in": "query",
 						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/stats/match/map": {
+			"get": {
+				"operationId": "GetMatchMapStats",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IMatchMapStats"
+								}
+							}
+						}
+					}
+				},
+				"description": "Get match map stats for a specific match map.",
+				"security": [
+					{
+						"bearer_token_optional": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "map",
 						"required": true,
 						"schema": {
 							"type": "string"
